--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,7 +78,7 @@ ul, ol {
   max-width: var(--max-content-width);
   margin: 0 auto;
   width: 100%;
-  overflow: hidden;
+  overflow: clip;
 }
 
 .page-content {
